--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
   },
   "homepage": "http://cieufr.github.io/portfolio",
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.9",
+    "localforage": "^1.10.0",
+    "lucide-react": "^0.476.0",
+    "match-sorter": "^8.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.29.0",
+    "sort-by": "^1.2.0",
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
