--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.0.0",
     "react-router-dom": "^6.29.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.0.9"
