--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "homepage": "http://cieufr.github.io/portfolio",
   "dependencies": {
+    "@react-three/drei": "^10.0.3",
+    "@react-three/fiber": "^9.0.4",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/three": "^0.173.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.476.0",
     "match-sorter": "^8.0.0",
@@ -22,7 +25,8 @@
     "react-markdown": "^10.0.0",
     "react-router-dom": "^6.29.0",
     "sort-by": "^1.2.0",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
